--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style type="text/css">
+      body { background: #aad !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+   </style>
+
   </head>
   <body>
     {% block content %}{% endblock %}
