--- a/main/demo/templates/main.html
+++ b/main/demo/templates/main.html
@@ -1,10 +1,20 @@
 {% extends "base.html" %}
+
 {% block content %}
-
+<div class="container p-3 m-2">
     {% for image in images %}
-    <div class="alert alert-primary" role="alert">
-        {{ image }}
+    <div class="row">
+        <div class="col-sm text-center">
+            <img class="img-fluid" height="150" width="150" src="{{ image[0][0][0] }}">    
+        </div>
+        <div class="col-sm text-center">
+            <img class="img-fluid" height="150" width="150" src="{{ image[1][0][0] }}">    
+        </div>
+        <div class="col-sm text-center">
+            <h2>{{ image[2][0] }}</h2>    
+        </div>
     </div>
+    <br>
     {% endfor %}
-
+</div>
 {% endblock %}
