--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>EYC Demo</title>
     <style type="text/css">
-      body { background: #aad !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+      body { background: #fafafa !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
    </style>
 
   </head>
