--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -15,6 +15,29 @@
 
   </head>
   <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">EYC3PDBS3</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="/">Pairs > </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/photoshop">Photoshop > </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Network > </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Extra > </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        
     {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
