--- a/main/app/templates/display-directory.html
+++ b/main/app/templates/display-directory.html
@@ -48,15 +48,15 @@
     </head>
 
     <body>
-        <form action="/upload" method="post" enctype="multipart/form-data">
+        <form action="/upload-directory" method="post" enctype="multipart/form-data">
             <div class="btn-grp col-md-5 col-md-offset-1">
                 <div class="label">Pre Operation</div>
                 <br>
                 <br>
                 <!-- <input type="file" name="pre" class="file col-md-offset-4 col-md-4" id="preop" value="+"/> -->
-                <img class="imgsize" id="preimg" src='/static/default.jpg' alt="loaded image will be shown here" onerror="this.src='/static/default.jpg'" />
+                <img class="imgsize" id="preimg" src='/static/zip.jpeg' alt="loaded image will be shown here" onerror="this.src='/static/default.jpg'" />
                 <div class="form-control" data-provides="fileinput">
-                    <input type="file" name="pre" id="getimgpre" onchange="document.getElementById('preimg').src = window.URL.createObjectURL(this.files[0])"></span>
+                    <input type="file" name="pre-directory" id="getimgpre" />
                 </div>
             </div>
             <div class="btn-grp col-md-5">
@@ -64,20 +64,19 @@
                 <br>
                 <br>
                 <!-- <input type="file" name="post" class="file col-md-offset-4 col-md-4" id="postop" value="+"/> -->
-                <img class="imgsize" id="postimg" src='/static/default.jpg' alt="loaded image will be shown here" onerror="this.src='/static/default.jpg'" />
+                <img class="imgsize" id="postimg" src='/static/zip.jpeg' alt="loaded image will be shown here" onerror="this.src='/static/default.jpg'" />
                 <div class="form-control" data-provides="fileinput">
-                    <input type="file" name="post" id="getimgpost" onchange="document.getElementById('postimg').src = window.URL.createObjectURL(this.files[0])"></span>
+                    <input type="file" name="post-directory" />
                 </div>
             </div>
             <br>
             <div class="col-md-offset-5">
-            <input type="submit" name="post" class="col-md-4 btn btn-success" id="postop" value="Submit"/>
+                <input type="submit" value="Submit" id="postop" class="col-md-4 btn btn-success"/>
             </div>
         </form>
 
         <br>
-        <br>
-        <a href="/display-directory">upload in bulk</a>
+        <a href="/">upload single pre-post image pair</a>
 
     </body>
 
