--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="/photoshop">Photoshop > </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Network > </a>
+                <a class="nav-link" href="/augmentation">Augmentation > </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Extra > </a>
