--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -15,35 +15,37 @@
 
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">EYC3PDBS3</a>
+      <nav class="navbar navbar-expand-lg fixed-bottom navbar-light text-white"
+           style="background-color: #00cef6;">
+          <a class="navbar-brand text-white" href="#">EYC3PDBS3</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Pairs > </a>
+                <a class="nav-link text-white" href="/">Pairs > </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/photoshop">Photoshop > </a>
+                <a class="nav-link text-white" href="/photoshop">Photoshop > </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/augmentation">Augmentation > </a>
+                <a class="nav-link text-white" href="/augmentation">Augmentation > </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Extra > </a>
+                <a class="nav-link text-white" href="#">Extra > </a>
               </li>
             </ul>
           </div>
         </nav>
-        
-    {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+  
+    {% block content %}{% endblock %}
   </body>
 </html>
