partial demo ready

--- a/main/demo/templates/augment.html
+++ b/main/demo/templates/augment.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row p-0">
-    {% for image in images %}
-        <div class="col-sm-4 p-0">
-            <img class="img-fluid" src="{{image}}" alt="">
-        </div>
-    {% endfor %}
-    </div>
+<h1 class="m-3 text-center">Data Augmentation</h1>
+<br>
+<meta http-equiv="refresh" content="3">
+<div class="text-center">
+{% for image in images %}
+    <img class="img-thumbnail m-2" src="{{image}}" alt="" width="220px">
+{% endfor %}
 </div>
+
 {% endblock %}
