--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -15,25 +15,31 @@
 
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg fixed-bottom navbar-light text-white"
-           style="background-color: #00cef6;">
+      <nav class="navbar navbar-expand-lg navbar-light text-white"
+           style="background-color: #4A33E8;">
           <a class="navbar-brand text-white" href="#">EYC3PDBS3</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/intro?size=120&images=25&time=1">Intro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/vector">Vector Representation</a>
+              </li>
               <li class="nav-item active">
-                <a class="nav-link text-white" href="/">Pairs > </a>
+                <a class="nav-link text-white" href="/">Triplets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/photoshop">Photoshop > </a>
-              </li>
+                  <a class="nav-link text-white" href="/intro?size=60&images=72&time=0">SpeedTest</a>
+                </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/augmentation">Augmentation > </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Extra > </a>
+                <a class="nav-link text-white" href="/photoshop">Photoshop</a>
               </li>
             </ul>
           </div>
