--- a/main/demo/templates/main.html
+++ b/main/demo/templates/main.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br>
+<h1 class="m-3 text-center">Formation of Triplets</h1>
+<meta http-equiv="refresh" content="3">
 <div class="row container mx-auto">
     {% for image in images %}
-    <div class="col-md-4 p-3">
+    <div class="col-md-6 p-3">
         <div class="card text-center">
             <div class="card-header">
-              Image set {{loop.index}}
+              Triplet set {{loop.index}}
             </div>
             <div class="row card-body">
                 <div class="col-sm text-center">
-                    <img class="img-fluid" height="150" width="150" src="{{ image[0][0][0] }}">    
+                    <img class="img-fluid" height="150" width="150" src="{{ image[0][0] }}">    
                 </div>
                 <div class="col-sm text-center">
-                    <img class="img-fluid" height="150" width="150" src="{{ image[1][0][0] }}">    
+                    <img class="img-fluid" height="150" width="150" src="{{ image[1][0] }}">    
                 </div>
-            </div>
-            <div class="card-footer text-muted">
-              Label = {{ image[2][0] }}
+                <div class="col-sm text-center">
+                    <img class="img-fluid" height="150" width="150" src="{{ image[2][0] }}">    
+                </div>
             </div>
         </div>
     </div>
