--- a/main/app/templates/display-directory.html
+++ b/main/app/templates/display-directory.html
@@ -8,7 +8,7 @@
 <hr>
 <div class="container">
     
-    <form>    
+    <form action="/upload-directory" method="post" enctype="multipart/form-data">   
         <div class="row">
           <div class="col">
                 <div class="text-center"><h3>Pre Operation</h3></div>
