--- a/main/app/templates/result-single.html
+++ b/main/app/templates/result-single.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">PDBEYC-3</a>
+    <a href="/display-directory"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Batch Images</button></a>
+</nav>
+<br><br>
 <div class="row container mx-auto">
     <div class="col-md-12 p-6">
         <div class="card text-center">
