--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white" href="/intro?size=205&images=9&time=1">Intro</a>
+                <a class="nav-link text-white" href="/intro?size=215&images=9&time=1">Intro</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
@@ -39,7 +39,7 @@
                   <a class="nav-link text-white" href="/intro?size=60&images=72&time=0">SpeedTest</a>
                 </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/photoshop">Photoshop</a>
+                <a class="nav-link text-white" href="/photoshop?out=0">Photoshop</a>
               </li>
             </ul>
           </div>
