Add Reject List UI

--- a/main/app/templates/result-directory.html
+++ b/main/app/templates/result-directory.html
@@ -5,6 +5,8 @@
     <a class="navbar-brand" href="#">PDBEYC-3</a>
     <a href="/"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Singular Images</button></a>
 </nav>
+<br>
+<a href="/rejected-list"><button type="button" class="btn btn-outline-primary float-right mr-3">Check the Rejected List</button></a>
 <br><br>
 <div class="container">
     <div class="row">
